[gd_scene load_steps=3 format=2]

[ext_resource path="res://Word.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.5, 6.75 )

[node name="Word" type="Area2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 15.5, 5.25 )
shape = SubResource( 1 )

[connection signal="body_shape_entered" from="." to="." method="_on_Word_body_shape_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_Word_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Word_mouse_exited"]
